--- a/book/src/chap01.asciidoc
+++ b/book/src/chap01.asciidoc
@@ -1,17 +1,17 @@
 [role="pagenumrestart"]
 [[chap01]]
-== The Way of the Program
+== 프로그램의 길
 
-The ((("computer scientists, skills of", seealso="programming")))goal of this book is to teach you to think like a computer scientist. This way of thinking combines some of the best features of mathematics, engineering, and natural science. Like mathematicians, computer scientists use formal languages to denote ideas (specifically computations). Like engineers, they design things, assembling components into systems and evaluating trade-offs among alternatives. Like scientists, they observe the behavior of complex systems, form hypotheses, and test predictions.
+((("컴퓨터과학자, 기술", seealso="programming"))) 이 책이 목표는 여러분이 컴퓨터과학자처럼 생각할 수 있게끔 하는 것입니다. 컴퓨터과학자가 생각하는 방식은 수학, 공학, 과학자들의 생각방식과 그 핵심이 같습니다. 컴퓨터과학자는 수학자처럼 생각을 표현하기 위해 형식언어를 사용합니다. (특히 계산이 그렇죠). 공학자처럼 설계하고, 부품을 조립해 장치나 시스템을 만들고, 여러 대안들의 트레이드 오프(trade-off)를 검토합니다. 과학자처럼 복잡계가 보여주는 현상에 대해서 관찰하고, 가설을 수립하고, 예측을 검증하죠.
 
-The ((("problem solving")))single most important skill for a computer scientist is _problem solving_. Problem solving means the ability to formulate problems, think creatively about solutions, and express a solution clearly and accurately. As it turns out, the process of learning to program is an excellent opportunity to practice problem-solving skills. That’s why this chapter is called “The Way of the Program.”
+((("문제해결"))) 컴퓨터과학자가 가져야 하는 가장 중요한 역량은 _문제해결_ 능력입니다. 문제해결이란 문제를 잘 정의하고, 해결방안에 대해 창의적으로 생각하고, 해결방안을 명료하게 표현하는 것을 말합니다. 알고보면, 프로그래밍 학습은 문제해결능력을 기를 수 있는 정말 좋은 기회죠. 그래서 이 장의 제목을 “프로그램의 길”로 지었습니다.
 
-On one level, you will be learning to program, a useful skill by itself. On another level, you will use programming as a means to an end. As we go along, that end will become clearer.
+여러분은 프로그래밍을 배우게 될 겁니다. 그 자체로 유용한 기술이긴 합니다만, 다른 관점에서 보면 프로그래밍은 어떤 목표를 달성하기 위한 수단입니다. 그 목표가 뭘까요? 차차 진행하면서 좀 더 명확해질 것 같습니다.
 
 
-=== What Is a Program?
+=== 프로그램이란 무엇인가
 
-A _program_ ((("programs")))is a sequence of instructions that specifies how to perform a computation. The computation might be something mathematical, such as solving a system of equations or finding the roots of a polynomial, but it can also be a symbolic computation, such as searching for and replacing text in a document, or something graphical, like processing an image or playing a video.
+_프로그램_((("프로그램")))이란 프로그램이란 계산을 수행하는 방식을 기술해놓은 명령어의 나열입니다. 계산이란 방정식을 풀거나 다항식의 근을 구하는 것 같은 수학적 계산일 수도 있습니다만, 문서에서 단어를 찾아 바꾸거나, 이미지 프로세싱처럼 그래픽을 다루거나, 비디오를 재생을 하는 것 같은 기호계산일 수도 있습니다.
 
 The ((("instructions", seealso="statements")))details look different in different languages, but a few basic instructions appear in just about every language:
 
